--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,49 @@
-server.port=8111
-spring.datasource.url = jdbc:h2:mem:example
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/buddb
+spring.datasource.username=budapp
+spring.datasource.password=budpassword
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+server.error.include-message=always
 
-#create drop should not be used in a persistence database
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql = true
-spring.jpa.properties.hibernate.use_sql_comments = true
-spring.jpa.properties.hibernate.format_sql = true
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
-spring.data.mongodb.uri = mongodb://localhost:27017/test
+# working mongo stuff
+# server.port=8111
+# spring.datasource.url=jdbc:h2:mem:example
+# spring.datasource.username=sa
+# spring.datasource.password=
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.use_sql_comments=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+# spring.data.mongodb.uri=mongodb://192.168.0.19:27017/admin
 
+
+# mine test
+# server.port=8111
+# spring.data.mongodb.uri=mongodb://192.168.0.19:27017/admin
+# spring.datasource.username=myUserAdmin
+# spring.datasource.password=myuseradmin
+# spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.show-sql=true
+
+# spring.data.mongodb.host= # the db host
+# spring.data.mongodb.port=27017 # the connection port (defaults to 27107)
+# spring.data.mongodb.authentication-database=admin
+# spring.data.mongodb.username=root
+# spring.data.mongodb.password=root
+# spring.data.mongodb.database=test_db
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.host=localhost
+
+# spring.datasource.url=jdbc:mongodb://192.168.0.19:27017/test
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.jpa.properties.hibernate.generate_statistics=true
+# server.error.include-message=always
