--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.generate_statistics=false
 server.error.include-message=always
+spring.jpa.open-in-view=true
