--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <groupId>com.budlib</groupId>
     <artifactId>api</artifactId>
     <version>1.0.0</version>
+    <packaging>jar</packaging>
     <name>budlib-api</name>
     <description>RESTful API for BudLib</description>
     <properties>
@@ -53,11 +54,6 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.32</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.4</version>
@@ -71,6 +67,7 @@
     </dependencies>
 
     <build>
+        <!-- <finalName>budlib-${project.artifactId}-${project.version}</finalName> -->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -82,6 +79,15 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
