build: #17 saving logs in file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.generate_statistics=false
 server.error.include-message=always
 spring.jpa.open-in-view=true
+logging.level.org.springframework=info
+logging.level.org.hibernate=error
+logging.level.com.budlib=debug
+logging.file.path=/tmp/budlib/
+logging.file.name=/tmp/budlib/budlib-api.log
+logging.pattern.rolling-file-name=/tmp/budlib/budlib-api_%d{yyyy_MM_dd}.%i.log
+logging.file.max-history=31
+logging.file.max-size=10MB
