chore: splitting properties into sections for readability

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,21 @@
+# database
 spring.datasource.url=jdbc:mysql://localhost:3306/buddb
 spring.datasource.username=budapp
 spring.datasource.password=budpassword
-jwt.signingkey=supersecret
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.generate_statistics=false
-server.error.include-message=always
 spring.jpa.open-in-view=true
+
+# jwt
+jwt.signingkey=supersecret
+
+# showing exception stack trace: https://stackoverflow.com/a/62410598
+server.error.include-message=always
+
+# logging
 logging.level.org.springframework=info
 logging.level.org.hibernate=error
 logging.level.com.budlib=debug
