build: #17 updating logging pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,13 @@ jwt.signingkey=supersecret
 server.error.include-message=always
 
 # logging
-logging.level.org.springframework=info
-logging.level.org.hibernate=error
-logging.level.com.budlib=debug
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=ERROR
+logging.level.com.budlib.api=DEBUG
 logging.file.path=/tmp/budlib/
 logging.file.name=/tmp/budlib/budlib-api.log
 logging.pattern.rolling-file-name=/tmp/budlib/budlib-api_%d{yyyy_MM_dd}.%i.log
 logging.file.max-history=31
 logging.file.max-size=10MB
+logging.pattern.console=%clr(%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}){magenta} %clr(---){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}
+logging.pattern.file=%d{${LOG_DATEFORMAT_PATTERN:yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:%5p} --- %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}
